--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
+*DS_Store
 
 # Visual Studio 2015 cache directory
 /.vs/
@@ -32,3 +33,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+*/Temp
+*/Library
